unpackaged/main/default/objects/SBQQ__Quote__c/fields/Freight_Override_PVC_Fittings__c.field-meta.xml
<CustomField>
    <fullName>Freight_Override_PVC_Fittings__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Freight Override (PVC Fittings)</label>
    <type>Checkbox</type>
</CustomField>