unpackaged/main/default/objects/SBQQ__Quote__c/fields/Freight_Override_PVC_Water_Pipe__c.field-meta.xml
<CustomField>
    <fullName>Freight_Override_PVC_Water_Pipe__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Freight Override (PVC Water Pipe)</label>
    <type>Checkbox</type>
</CustomField>