unpackaged/main/default/objects/SBQQ__Quote__c/fields/Freight_Override_Steel_Conduit__c.field-meta.xml
<CustomField>
    <fullName>Freight_Override_Steel_Conduit__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Freight Override (Steel Conduit)</label>
    <type>Checkbox</type>
</CustomField>