unpackaged/main/default/objects/SBQQ__Quote__c/fields/Freight_Sub_Total_Conduit_Cable_Fittings__c.field-meta.xml
<CustomField>
    <fullName>Freight_Sub_Total_Conduit_Cable_Fittings__c</fullName>
    <label>Freight Cost (Conduit&amp;Cable Fittings)</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>