unpackaged/main/default/objects/SBQQ__Quote__c/fields/Freight_Sub_Total_ECN__c.field-meta.xml
<CustomField>
    <fullName>Freight_Sub_Total_ECN__c</fullName>
    <label>Freight Cost (ECN)</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>