unpackaged/main/default/objects/SBQQ__Quote__c/fields/Freight_Sub_Total_PPC_Conduit__c.field-meta.xml
<CustomField>
    <fullName>Freight_Sub_Total_PPC_Conduit__c</fullName>
    <description>Calculated freight charges for PPC Conduit line items. Check OVERRIDE to manually adjust this amount.</description>
    <inlineHelpText>Calculated freight charges for PPC Conduit line items. Check OVERRIDE to manually adjust this amount.</inlineHelpText>
    <label>Freight Cost (PPC Conduit)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>