unpackaged/main/default/objects/SBQQ__Quote__c/fields/Freight_Sub_Total_PPC_Fittings__c.field-meta.xml
<CustomField>
    <fullName>Freight_Sub_Total_PPC_Fittings__c</fullName>
    <description>Calculated freight charges for PPC Fittings line items. Check OVERRIDE to manually adjust this amount.</description>
    <label>Freight Cost (PPC Fittings)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>