unpackaged/main/default/objects/SBQQ__Quote__c/fields/Freight_Sub_Total_PVC_Water_Pipe__c.field-meta.xml
<CustomField>
    <fullName>Freight_Sub_Total_PVC_Water_Pipe__c</fullName>
    <label>Freight Sub-Total (PVC Water Pipe)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>