unpackaged/main/default/objects/SBQQ__Quote__c/fields/Freight_Total__c.field-meta.xml
<CustomField>
    <fullName>Freight_Total__c</fullName>
    <label>Total Freight Cost</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>