unpackaged/main/default/objects/SBQQ__Quote__c/fields/Gross_Invoice_CRC__c.field-meta.xml
<CustomField>
    <fullName>Gross_Invoice_CRC__c</fullName>
    <label>Gross Invoice, CRC</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>