unpackaged/main/default/objects/SBQQ__Quote__c/fields/Gross_Invoice_CRC_Approval_1__c.field-meta.xml
<CustomField>
    <fullName>Gross_Invoice_CRC_Approval_1__c</fullName>
    <defaultValue>false</defaultValue>
    <description>True if Margin &gt; 0</description>
    <label>Gross Invoice CRC Approval 1</label>
    <type>Checkbox</type>
</CustomField>