unpackaged/main/default/objects/SBQQ__Quote__c/fields/Gross_Invoice_CRC_Approval_3__c.field-meta.xml
<CustomField>
    <fullName>Gross_Invoice_CRC_Approval_3__c</fullName>
    <defaultValue>false</defaultValue>
    <description>True if Margin &gt;  25000 &amp; &lt; 100001</description>
    <label>Gross Invoice CRC Approval 3</label>
    <type>Checkbox</type>
</CustomField>