unpackaged/main/default/objects/SBQQ__Quote__c/fields/Gross_Invoice_KON__c.field-meta.xml
<CustomField>
    <fullName>Gross_Invoice_KON__c</fullName>
    <label>Gross Invoice, KON</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>