unpackaged/main/default/objects/SBQQ__Quote__c/fields/Gross_Invoice_PVC_Fittings__c.field-meta.xml
<CustomField>
    <fullName>Gross_Invoice_PVC_Fittings__c</fullName>
    <label>Quoted Total (PVC Fittings)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>