unpackaged/main/default/objects/SBQQ__Quote__c/fields/HeaderFieldSetName__c.field-meta.xml
<CustomField>
    <fullName>HeaderFieldSetName__c</fullName>
    <formula>If(
   $User.ContactId &lt;&gt; NULL,
   &#39;Community_Users&#39;,
   &#39;SBQQ__LineEditor&#39;
)</formula>
    <label>HeaderFieldSetName</label>
    <type>Text</type>
</CustomField>