unpackaged/main/default/objects/SBQQ__Quote__c/fields/Hide_Line_Item_Prices__c.field-meta.xml
<CustomField>
    <fullName>Hide_Line_Item_Prices__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Hide Line Item Prices</label>
    <type>Checkbox</type>
</CustomField>