unpackaged/main/default/objects/SBQQ__Quote__c/fields/Hide_Save_Button__c.field-meta.xml
<CustomField>
    <fullName>Hide_Save_Button__c</fullName>
    <formula>AND(
    User_Type__c = &#39;External&#39;,
    TEXT(SBQQ__Status__c) != &#39;Draft&#39;
)</formula>
    <label>Hide Save Button</label>
    <type>Checkbox</type>
</CustomField>