unpackaged/main/default/objects/SBQQ__Quote__c/fields/Is_Cloned__c.field-meta.xml
<CustomField>
    <fullName>Is_Cloned__c</fullName>
    <formula>IF (
    SBQQ__Source__c &lt;&gt; NULL,TRUE,FALSE)</formula>
    <label>Is Cloned</label>
    <type>Checkbox</type>
</CustomField>