unpackaged/main/default/objects/SBQQ__Quote__c/fields/JDE_Agent_Number__c.field-meta.xml
<CustomField>
    <fullName>JDE_Agent_Number__c</fullName>
    <formula>Agency__r.JDE_Agent_Number__c</formula>
    <label>JDE Agent Number</label>
    <type>Text</type>
</CustomField>