unpackaged/main/default/objects/SBQQ__Quote__c/fields/Job_Name__c.field-meta.xml
<CustomField>
    <fullName>Job_Name__c</fullName>
    <label>Job Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>