unpackaged/main/default/objects/SBQQ__Quote__c/fields/KON_Freight_Override__c.field-meta.xml
<CustomField>
    <fullName>KON_Freight_Override__c</fullName>
    <defaultValue>false</defaultValue>
    <label>KON Freight Override</label>
    <type>Checkbox</type>
</CustomField>