unpackaged/main/default/objects/SBQQ__Quote__c/fields/Leadtime_Based_on_Orders__c.field-meta.xml
<CustomField>
    <fullName>Leadtime_Based_on_Orders__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Above lead time are based on orders out of the factory. Any additional transportation time to the RDC or Agent facility is not included in the dates given.</inlineHelpText>
    <label>Leadtime Based on Orders</label>
    <type>Checkbox</type>
</CustomField>