unpackaged/main/default/objects/SBQQ__Quote__c/fields/Link_to_Quote__c.field-meta.xml
<CustomField>
    <fullName>Link_to_Quote__c</fullName>
    <formula>LEFT($Api.Partner_Server_URL_260, FIND( &#39;/services&#39;, $Api.Partner_Server_URL_260))&amp; Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Link to Quote</label>
    <type>Text</type>
</CustomField>