unpackaged/main/default/objects/SBQQ__Quote__c/fields/Logo_from_owner__c.field-meta.xml
<CustomField>
    <fullName>Logo_from_owner__c</fullName>
    <formula>Owner:User.Logo__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Logo from Owner</label>
    <type>Text</type>
</CustomField>