unpackaged/main/default/objects/SBQQ__Quote__c/fields/Margin_Aluminum_Conduit_Fittings__c.field-meta.xml
<CustomField>
    <fullName>Margin_Aluminum_Conduit_Fittings__c</fullName>
    <formula>Gross_Invoice_Aluminum_Conduit_Fittings__c - Total_Cost_Aluminum_Conduit_Fittings__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Margin $ (Aluminum Conduit&amp;Fittings)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>