unpackaged/main/default/objects/SBQQ__Quote__c/fields/Margin_Aluminum_Conduit_Fittings_Per__c.field-meta.xml
<CustomField>
    <fullName>Margin_Aluminum_Conduit_Fittings_Per__c</fullName>
    <formula>IF(
Gross_Invoice_Aluminum_Conduit_Fittings__c =0,
0,
(Gross_Invoice_Aluminum_Conduit_Fittings__c - Total_Cost_Aluminum_Conduit_Fittings__c)
/
Gross_Invoice_Aluminum_Conduit_Fittings__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Margin % (Aluminum Conduit &amp; Fittings)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>