unpackaged/main/default/objects/SBQQ__Quote__c/fields/Margin_AMT_Cable_Manage__c.field-meta.xml
<CustomField>
    <fullName>Margin_AMT_Cable_Manage__c</fullName>
    <formula>Gross_Invoice_Cable_Manage__c -   Total_Cost_Cable_Manage__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Margin $ (Cable Management)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>