unpackaged/main/default/objects/SBQQ__Quote__c/fields/Margin_Cable_Manage__c.field-meta.xml
<CustomField>
    <fullName>Margin_Cable_Manage__c</fullName>
    <formula>IF(
  Gross_Invoice_Cable_Manage__c =0,
  0, 
       (Gross_Invoice_Cable_Manage__c - Total_Cost_Cable_Manage__c)
                                   /
                     Gross_Invoice_Cable_Manage__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Margin % (Cable Management)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>