unpackaged/main/default/objects/SBQQ__Quote__c/fields/Margin_Conduit_Cable_Fittings__c.field-meta.xml
<CustomField>
    <fullName>Margin_Conduit_Cable_Fittings__c</fullName>
    <formula>IF (Gross_Invoice_Conduit_Cable_Fittings__c = 0,0, 

(Gross_Invoice_Conduit_Cable_Fittings__c- Total_Cost_Conduit_Cable_Fittings__c)/Gross_Invoice_Conduit_Cable_Fittings__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Margin % (Conduit &amp; Cable Fittings)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>