unpackaged/main/default/objects/SBQQ__Quote__c/fields/Margin_Conduit_Cable_Fittings_AMT__c.field-meta.xml
<CustomField>
    <fullName>Margin_Conduit_Cable_Fittings_AMT__c</fullName>
    <formula>Gross_Invoice_Conduit_Cable_Fittings__c - Total_Cost_Conduit_Cable_Fittings__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Margin $ (Conduit &amp; Cable Fittings)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>