unpackaged/main/default/objects/SBQQ__Quote__c/fields/Margin_Conduit_Cable_Fittings_Approval_2__c.field-meta.xml
<CustomField>
    <fullName>Margin_Conduit_Cable_Fittings_Approval_2__c</fullName>
    <defaultValue>false</defaultValue>
    <description>True if margin less than 20</description>
    <label>Margin Conduit Cable Fittings Approval 2</label>
    <type>Checkbox</type>
</CustomField>