unpackaged/main/default/objects/SBQQ__Quote__c/fields/Margin_ECFC_AMT__c.field-meta.xml
<CustomField>
    <fullName>Margin_ECFC_AMT__c</fullName>
    <formula>Gross_Invoice_ElectricalCableFlexConduit__c - Total_Cost_ECFC__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Margin $ (ECFC)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>