unpackaged/main/default/objects/SBQQ__Quote__c/fields/Margin_ECN_AMT__c.field-meta.xml
<CustomField>
    <fullName>Margin_ECN_AMT__c</fullName>
    <formula>Gross_Invoice_ECN__c - Total_Cost_ECN__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Margin $ (ECN)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>