unpackaged/main/default/objects/SBQQ__Quote__c/fields/Margin_ElectricalCableFlexConduit__c.field-meta.xml
<CustomField>
    <fullName>Margin_ElectricalCableFlexConduit__c</fullName>
    <formula>IF ( Gross_Invoice_ElectricalCableFlexConduit__c  = 0,0, 
(Gross_Invoice_ElectricalCableFlexConduit__c-  Total_Cost_ECFC__c )/Gross_Invoice_ElectricalCableFlexConduit__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Margin % (ECFC)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>