unpackaged/main/default/objects/SBQQ__Quote__c/fields/Margin_ElectricalCableFlexConduit_Aprv1__c.field-meta.xml
<CustomField>
    <fullName>Margin_ElectricalCableFlexConduit_Aprv1__c</fullName>
    <defaultValue>false</defaultValue>
    <description>True if margin &gt; 0</description>
    <label>Margin ElectricalCableFlexConduit Aprv1</label>
    <type>Checkbox</type>
</CustomField>