unpackaged/main/default/objects/SBQQ__Quote__c/fields/Margin_ElectricalCableFlexConduit_Aprv2__c.field-meta.xml
<CustomField>
    <fullName>Margin_ElectricalCableFlexConduit_Aprv2__c</fullName>
    <defaultValue>false</defaultValue>
    <description>True if margin less than 8</description>
    <label>Margin ElectricalCableFlexConduit Aprv2</label>
    <type>Checkbox</type>
</CustomField>