unpackaged/main/default/objects/SBQQ__Quote__c/fields/Margin_FRE__c.field-meta.xml
<CustomField>
    <fullName>Margin_FRE__c</fullName>
    <formula>IF(
Gross_Invoice_FRE__c =0,
0,
(Gross_Invoice_FRE__c - Total_Cost_FRE__c)
/
Gross_Invoice_FRE__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Margin % (FRE)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>