unpackaged/main/default/objects/SBQQ__Quote__c/fields/Margin_FRE_AMT__c.field-meta.xml
<CustomField>
    <fullName>Margin_FRE_AMT__c</fullName>
    <formula>Gross_Invoice_FRE__c -   Total_Cost_FRE__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Margin $ (FRE)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>