unpackaged/main/default/objects/SBQQ__Quote__c/fields/Margin_Metal_Framing__c.field-meta.xml
<CustomField>
    <fullName>Margin_Metal_Framing__c</fullName>
    <formula>IF(
  Gross_Invoice_Metal_Framing__c =0,
  0, 
       (Gross_Invoice_Metal_Framing__c - Total_Cost_Metal_Framing__c)
                                   /
                     Gross_Invoice_Metal_Framing__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Margin % (Metal Framing)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>