unpackaged/main/default/objects/SBQQ__Quote__c/fields/Margin_Metal_Framing_AMT__c.field-meta.xml
<CustomField>
    <fullName>Margin_Metal_Framing_AMT__c</fullName>
    <formula>Gross_Invoice_Metal_Framing__c -   Total_Cost_Metal_Framing__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Margin $ (Metal Framing)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>