unpackaged/main/default/objects/SBQQ__Quote__c/fields/Margin_Metal_Framing_Approval_25__c.field-meta.xml
<CustomField>
    <fullName>Margin_Metal_Framing_Approval_25__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check if Margin Metal Framing Approval is needed for 25% margin</description>
    <label>Margin Metal Framing Approval (25)</label>
    <type>Checkbox</type>
</CustomField>