unpackaged/main/default/objects/SBQQ__Quote__c/fields/Margin_Plastic_Pipe_Conduit_Approval_1__c.field-meta.xml
<CustomField>
    <fullName>Margin_Plastic_Pipe_Conduit_Approval_1__c</fullName>
    <defaultValue>false</defaultValue>
    <description>True if margin is &gt; 0 &amp; &lt; .35</description>
    <label>Margin Plastic Pipe Conduit Approval 1</label>
    <type>Checkbox</type>
</CustomField>