unpackaged/main/default/objects/SBQQ__Quote__c/fields/Margin_Plastic_Pipe_Conduit_Approval_2__c.field-meta.xml
<CustomField>
    <fullName>Margin_Plastic_Pipe_Conduit_Approval_2__c</fullName>
    <defaultValue>false</defaultValue>
    <description>True if margin &gt; = .35</description>
    <label>Margin Plastic Pipe Conduit Approval 2</label>
    <type>Checkbox</type>
</CustomField>