unpackaged/main/default/objects/SBQQ__Quote__c/fields/Margin_PVC_Conduit__c.field-meta.xml
<CustomField>
    <fullName>Margin_PVC_Conduit__c</fullName>
    <formula>IF(
Gross_Invoice_PVC_Conduit__c =0,
0,

(Gross_Invoice_PVC_Conduit__c - Total_Cost_PVC_Conduit__c)
/
Gross_Invoice_PVC_Conduit__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Margin % (PVC Conduit)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>