unpackaged/main/default/objects/SBQQ__Quote__c/fields/Margin_PVC_Fittings__c.field-meta.xml
<CustomField>
    <fullName>Margin_PVC_Fittings__c</fullName>
    <formula>IF(
Gross_Invoice_PVC_Fittings__c =0,
NULL,

(Gross_Invoice_PVC_Fittings__c -Total_Cost_PVC_Fittings__c)
/
Gross_Invoice_PVC_Fittings__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Margin % (PVC Fittings)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>