unpackaged/main/default/objects/SBQQ__Quote__c/fields/Margin_PVC_Water_Pipe__c.field-meta.xml
<CustomField>
    <fullName>Margin_PVC_Water_Pipe__c</fullName>
    <formula>IF(
 Quoted_Total_PVC_Water_Pipe__c  =0,
0,
(Quoted_Total_PVC_Water_Pipe__c -  Total_Cost_PVC_Water_Pipe__c )
/
Quoted_Total_PVC_Water_Pipe__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Margin % (PVC Water Pipe)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>