unpackaged/main/default/objects/SBQQ__Quote__c/fields/Margin_PVC_Water_Pipe_AMT__c.field-meta.xml
<CustomField>
    <fullName>Margin_PVC_Water_Pipe_AMT__c</fullName>
    <formula>Quoted_Total_PVC_Water_Pipe__c -  Total_Cost_PVC_Water_Pipe__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Margin $ (PVC Water Pipe)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>