unpackaged/main/default/objects/SBQQ__Quote__c/fields/Margin_Steel_Conduit_ECN__c.field-meta.xml
<CustomField>
    <fullName>Margin_Steel_Conduit_ECN__c</fullName>
    <formula>IF(
Gross_Invoice_Steel_Conduit__c + Gross_Invoice_ECN__c = 0,
0,

( (Gross_Invoice_Steel_Conduit__c + Gross_Invoice_ECN__c) - (Total_Cost_Steel_Conduit__c + Total_Cost_ECN__c) )
/
(Gross_Invoice_Steel_Conduit__c + Gross_Invoice_ECN__c)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Margin % (Steel Conduit / ECN)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>