unpackaged/main/default/objects/SBQQ__Quote__c/fields/Margin_Steel_ConduitAMT__c.field-meta.xml
<CustomField>
    <fullName>Margin_Steel_ConduitAMT__c</fullName>
    <formula>Gross_Invoice_Steel_Conduit__c - Total_Cost_Steel_Conduit__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Margin $ (Steel Conduit)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>