unpackaged/main/default/objects/SBQQ__Quote__c/fields/MAX_Multiplier_Variance_Cable_Manage__c.field-meta.xml
<CustomField>
    <fullName>MAX_Multiplier_Variance_Cable_Manage__c</fullName>
    <label>MAX Multiplier Variance - Cable Manage</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>