unpackaged/main/default/objects/SBQQ__Quote__c/fields/Max_Price_Variance_PVCCON__c.field-meta.xml
<CustomField>
    <fullName>Max_Price_Variance_PVCCON__c</fullName>
    <label>Max Price Variance % (PVCCON)</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>