unpackaged/main/default/objects/SBQQ__Quote__c/fields/Metal_Framing_Filter_Helper__c.field-meta.xml
<CustomField>
    <fullName>Metal_Framing_Filter_Helper__c</fullName>
    <formula>IF(
   SBQQ__Account__r.Metal_Framing_Rep__c = TRUE,
   &#39;MTLFRM&#39;,
   &#39;N/A&#39;
)</formula>
    <label>Metal Framing Filter Helper</label>
    <type>Text</type>
</CustomField>