unpackaged/main/default/objects/SBQQ__Quote__c/fields/Metal_Framing_NA_Quote_Lines__c.field-meta.xml
<CustomField>
    <fullName>Metal_Framing_NA_Quote_Lines__c</fullName>
    <label>Metal Framing NA Quote Lines</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>